cmake_minimum_required(VERSION 3.7)

project(lrepl)

# Output directories
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

# Turn on the ability to create folders to organize projects (.vcproj) It
# creates "CMakePredefinedTargets" folder by default and adds CMake defined
# projects like INSTALL.vcproj and ZERO_CHECK.vcproj
set_property(GLOBAL PROPERTY USE_FOLDERS ON)

# Sub-directories where more CMakeLists.txt exist
add_subdirectory(src)
add_subdirectory(lua-5.4.6)

include(FetchContent)
FetchContent_Declare(
  linenoise
  GIT_REPOSITORY https://github.com/antirez/linenoise
  GIT_TAG 1.0
)
FetchContent_MakeAvailable(linenoise)
